syntax = "proto3";

package customers.grpc;

option java_multiple_files = true;
option java_package = "org.emanuel.customers.infra.grpc.customer";
option java_outer_classname = "CustomerProto";

message IdRequest {
  int64 id = 1;
}

message CustomerMinimal {
  int64 id = 1;
  string name = 2;
  string dni = 3;
  string email = 4;
  string phone = 5;
}

service CustomerService {
  rpc GetById (IdRequest) returns (CustomerMinimal);
}

